# ChainViz

./: .cursorrules  .gitignore  API_COMPARISON_REPORT.md  AUTO_DEPLOY_SETUP.md  AWS_DEPLOYMENT_FIX.md  AWS_DEPLOYMENT_GUIDE.md  AWS_DEPLOYMENT_STATUS.md  BATCHING_COMPLETE.md  BATCHING_COMPLETE_FINAL.md  BATCHING_IMPLEMENTATION.md  BATCHING_OPTIMIZATIONS_IMPLEMENTED.md  BATCHING_OPTIMIZATION_PLAN.md  BATCHING_SUMMARY.md  CLUSTER_STATUS.md  COMPLETE_REDESIGN.md  DEBUG_CHECKLIST.md  DEPLOYMENT_INFO.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS.md  DEPLOY_TO_AWS.md  DISK_SPACE_ANALYSIS.md  DOCKER_QUICK_START.md  DOCKER_SETUP.md  DOCUMENTATION_SUMMARY.md  ELECTRUM_VS_MEMPOOL_ANALYSIS.md  FAST_PATH_IMPLEMENTATION.md  FINAL_PERFORMANCE_SUMMARY.md  FINAL_SUMMARY.md  GETTING_STARTED.md  HEAVY_TX_FINAL_RESULTS.md  HEAVY_TX_PERFORMANCE_ANALYSIS.md  HTTPS_SUCCESS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  LAYOUT_OPTIMIZATION.md  LAZY_MULTIPLEXER_COMPLETE.md  LOCAL_AUTO_DEPLOY_GUIDE.md  MEMORY_LEAK_FIX.md  MEMPOOL_INTEGRATION_COMPLETE.md  (+41 more)
backend/: Dockerfile  README.md  benchmark_heavy_tx.py  pyproject.toml  requirements.txt  server_benchmark_results.txt  start.sh  working_servers.json
backend/app/: __init__.py  config.py  main.py
backend/app/analysis/: amount_patterns.py  change_detection.py  clustering.py  coinjoin.py  orchestrator.py  peel_chain.py  temporal.py
backend/app/api/: __init__.py  address.py  bulk.py  config.py  (+8 more)
backend/scripts/: mempool_benchmark.py  probe_pagination.py
backend/tests/: __init__.py  test_heuristics.py
(+144 files in other folders)
